--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ requests==2.32.3
 python-engineio==4.11.2
 python-socketio==5.12.1
 flask-session==0.8.0
+simple-websocket==1.1.0
+websockets==15.0.1
